// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brandDictionary getBrandsWithInstallationInfo Should return the list of brands with a isInstalled boolean property 1`] = `
Array [
  Object {
    "contact": Array [
      Object {
        "action": "sendCareSheet",
        "href": "https://alan.eu/login",
        "type": "web",
      },
      Object {
        "href": "https://alan.eu/open-or-download-mobile-app?origin=alanweb_landing_footer&os=android",
        "platform": "android",
        "type": "app",
      },
      Object {
        "href": "https://alan.eu/open-or-download-mobile-app?origin=alanweb_landing_footer&os=ios",
        "platform": "ios",
        "type": "app",
      },
    ],
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "alan",
    "name": "Alan",
    "regexp": "\\\\balan\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "amazon",
    "name": "Amazon",
    "regexp": "\\\\bamazo?n\\\\b",
  },
  Object {
    "contact": Array [
      Object {
        "number": "36 46",
        "price": "0,06 €/min",
        "type": "phone",
      },
      Object {
        "action": "sendCareSheet",
        "href": "https://www.ameli.fr/assure/adresses-et-contacts",
        "type": "web",
      },
    ],
    "health": true,
    "isInstalled": true,
    "konnectorSlug": "ameli",
    "name": "Ameli",
    "regexp": "(cpam|c\\\\.p\\\\.a\\\\.m|caisse primaire)",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "aprr",
    "name": "APRR",
    "regexp": "\\\\baprr\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "ascoresante",
    "name": "Ascore Santé Prévoyance",
    "regexp": "\\\\baxiome\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "auchandrive",
    "name": "Auchan Drive",
    "regexp": "\\\\bauchan\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "autolib",
    "name": "Autolib",
    "regexp": "\\\\bautolib\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bipandgo",
    "name": "Bipandgo",
    "regexp": "\\\\bbipandgo\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bitiba",
    "name": "Bitiba",
    "regexp": "\\\\bbitiba\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "blablacar",
    "name": "Blablacar",
    "regexp": "\\\\bblablacar\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bookingdotcom",
    "name": "Booking.com",
    "regexp": "\\\\bbooking.com\\\\b",
  },
  Object {
    "isInstalled": true,
    "konnectorSlug": "boulanger",
    "name": "Boulanger",
    "regexp": "\\\\bboulanger\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bouyguesbox",
    "name": "Bouygues Box",
    "regexp": "\\\\bbouyg",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bouyguestelecom",
    "name": "Bouygues Telecom",
    "regexp": "\\\\bbouyg",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "caf",
    "name": "CAF",
    "regexp": "\\\\bcaf\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "cdiscount",
    "name": "Cdiscount",
    "regexp": "\\\\bcdiscount\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "cesml",
    "name": "CESML",
    "regexp": "\\\\bcesml\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "cesu",
    "name": "CESU",
    "regexp": "\\\\bcncesu\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "cultura",
    "name": "Cultura",
    "regexp": "\\\\bcultura\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "darty",
    "name": "Darty",
    "regexp": "\\\\bdarty\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "deezer",
    "name": "Deezer",
    "regexp": "\\\\bdeezer\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "deliveroo",
    "name": "Deliveroo",
    "regexp": "\\\\bdeliveroo\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "directenergie",
    "name": "Direct Energie",
    "regexp": "\\\\bdirect energie\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "easyjet",
    "name": "EasyJet",
    "regexp": "\\\\beasyjet",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "eaudugrandlyon",
    "name": "Eau du Grand Lyon",
    "regexp": "\\\\bsoc eau gd lyon\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "edf",
    "name": "EDF",
    "regexp": "\\\\bedf\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "ekwateur",
    "name": "Ekwateur",
    "regexp": "\\\\bekwateur\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "electricitestrasbourg",
    "name": "Electricité de Strabourg",
    "regexp": "es energies strasbourg\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "enercoop",
    "name": "Enercoop",
    "regexp": "\\\\benercoop\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "engie",
    "name": "Engie",
    "regexp": "\\\\bengie\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "eovimcdparticuliers",
    "name": "Eovi MCD Particuliers",
    "regexp": "\\\\beovi mcd mutuelle\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "eticket",
    "name": "eTicket",
    "regexp": "\\\\betickets\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "fnac",
    "name": "Fnac",
    "regexp": "\\\\bfnac",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "free",
    "name": "Free",
    "regexp": "\\\\bfree (telecom|hautdebit)\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "freemobile",
    "name": "Free Mobile",
    "regexp": "\\\\bfree mobile\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "geg",
    "name": "GEG",
    "regexp": "\\\\bgaz et electricite de grenoble\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "generali",
    "name": "Generali",
    "regexp": "\\\\bgenerali\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "github",
    "name": "Github",
    "regexp": "\\\\bgithub\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "glisshop",
    "name": "Glisshop",
    "regexp": "\\\\bglisshop\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "harmonie",
    "name": "Harmonie",
    "regexp": "\\\\bharmonie\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "humanis",
    "name": "Humanis",
    "regexp": "\\\\bhumanis\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "impots",
    "name": "Impôts",
    "regexp": "(impot|impots|dgfip|d\\\\.g\\\\.f\\\\.i\\\\.p|ddfip|d\\\\.d\\\\.f\\\\.i\\\\.p|drfip|d\\\\.r\\\\.f\\\\.i\\\\.p|tresor public|finances pub|finances publiques)",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "inulogic",
    "name": "Inulogic",
    "regexp": "\\\\binulogic\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "justeat",
    "name": "JustEat",
    "regexp": "\\\\bjust eat\\\\b",
  },
  Object {
    "contact": Array [
      Object {
        "action": "contactComplementary",
        "href": "https://www.lamutuellegenerale.fr/mobile/mon-espace-adherent#modalContact",
        "type": "web",
      },
      Object {
        "number": "09 69 39 39 39",
        "type": "phone",
      },
      Object {
        "href": "https://play.google.com/store/apps/details?id=fr.lamutuellegenerale.mamutuelle",
        "platform": "android",
        "type": "app",
      },
      Object {
        "href": "https://apps.apple.com/fr/app/m-mutuelle/id582194132",
        "platform": "ios",
        "type": "app",
      },
    ],
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "lamutuellegenerale",
    "name": "La mutuelle générale",
    "regexp": "\\\\bla mutuelle gen",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "ldlc",
    "name": "LDLC",
    "regexp": "\\\\bldlc\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "mondediplo",
    "name": "Le Monde Diplomatique",
    "regexp": "\\\\bmonde[\\\\-\\\\s]diplomatique\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "leclercdrive",
    "name": "Leclerc Drive",
    "regexp": "\\\\bleclerc\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "lucca",
    "name": "Lucca",
    "regexp": "\\\\blucca\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "malentille",
    "name": "Ma lentille",
    "regexp": "\\\\bdigital eyewear\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "maifecheancier",
    "name": "Maif - Echeancier",
    "regexp": "\\\\bmaif\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "macif",
    "name": "Macif",
    "regexp": "\\\\bmacif\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "malakoffmederic",
    "name": "Malakoff Mederic",
    "regexp": "\\\\bmalakoff\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "msf",
    "name": "Médecins sans frontières",
    "regexp": "\\\\b(medecins sans frontieres|msf)\\\\b",
  },
  Object {
    "isInstalled": true,
    "konnectorSlug": "mediapart",
    "name": "Mediapart",
    "regexp": "\\\\bmediapart\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "mgen",
    "name": "MGEN",
    "regexp": "\\\\bmgen\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "misterauto",
    "name": "Mister Auto",
    "regexp": "\\\\bmister auto\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "nespresso",
    "name": "Nespresso",
    "regexp": "\\\\bnespresso\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "netflix",
    "name": "Netflix",
    "regexp": "\\\\bnetflix\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "net-entreprise-micro",
    "name": "Net-Entreprise (Micro-Entrepreneur)",
    "regexp": "\\\\bUrssaf\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "numericable",
    "name": "Numéricable",
    "regexp": "\\\\bnumericable\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "o2",
    "name": "O2",
    "regexp": "^o2\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "opngo",
    "name": "Opngo",
    "regexp": "\\\\bopngo\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "orange",
    "name": "Orange",
    "regexp": "\\\\borange\\\\b",
  },
  Object {
    "isInstalled": true,
    "konnectorSlug": "ovh",
    "name": "OVH",
    "regexp": "\\\\bovh\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "planeteoui",
    "name": "Planete OUI",
    "regexp": "\\\\boui energy\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "poleemploi",
    "name": "Pole Emploi",
    "regexp": "\\\\bpole emploi\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "probikeshop",
    "name": "Probikeshop",
    "regexp": "\\\\bprobikeshop\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "productboard",
    "name": "ProductBoard",
    "regexp": "\\\\bproductboard\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "saur",
    "name": "SAUR",
    "regexp": "\\\\bsaur\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "scaleway",
    "name": "Scaleway",
    "regexp": "\\\\bscaleway\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "sfr",
    "name": "SFR",
    "regexp": "\\\\bsfr\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "showroomprive",
    "name": "Showroom Privé",
    "regexp": "\\\\bshowroomprive\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "sncf",
    "name": "SNCF",
    "regexp": "\\\\bsncf\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "sosh",
    "name": "Sosh",
    "regexp": "\\\\bsosh\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "spartoo",
    "name": "Spartoo",
    "regexp": "\\\\bspartoo\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "stickersdiscount",
    "name": "Stickers Discount",
    "regexp": "\\\\bakoufen angers\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "tagandpass",
    "name": "Tag&Pass",
    "regexp": "\\\\bsemitag\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "theoldreader",
    "name": "The Old Reader",
    "regexp": "\\\\btheoldreader\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "thomann",
    "name": "Thomann",
    "regexp": "\\\\bthomann\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "trainline",
    "name": "Trainline",
    "regexp": "\\\\btrainline\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "unibet",
    "name": "Unibet",
    "regexp": "\\\\bunibet\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "venteprivee",
    "name": "Veepee",
    "regexp": "\\\\b(Vente\\\\-privee\\\\.com|veepee)\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "veoliaeau",
    "name": "Veolia Eau",
    "regexp": "\\\\bveolia\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "viasante",
    "name": "Viasanté",
    "regexp": "\\\\bVIASANTE\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "vinciautoroute",
    "name": "Vinci autoroute télépéage",
    "regexp": "\\\\b(vinci|escota)\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "wanimo",
    "name": "Wanimo",
    "regexp": "\\\\bwanimo\\\\b",
  },
  Object {
    "isInstalled": true,
    "konnectorSlug": "zalando",
    "name": "Zalando",
    "regexp": "\\\\bzalando\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "zooplus",
    "name": "ZooPlus",
    "regexp": "\\\\bzooplus\\\\b",
  },
]
`;

exports[`brandDictionary getNotInstalledBrands Should return the not installed brands 1`] = `
Array [
  Object {
    "contact": Array [
      Object {
        "action": "sendCareSheet",
        "href": "https://alan.eu/login",
        "type": "web",
      },
      Object {
        "href": "https://alan.eu/open-or-download-mobile-app?origin=alanweb_landing_footer&os=android",
        "platform": "android",
        "type": "app",
      },
      Object {
        "href": "https://alan.eu/open-or-download-mobile-app?origin=alanweb_landing_footer&os=ios",
        "platform": "ios",
        "type": "app",
      },
    ],
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "alan",
    "name": "Alan",
    "regexp": "\\\\balan\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "amazon",
    "name": "Amazon",
    "regexp": "\\\\bamazo?n\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "aprr",
    "name": "APRR",
    "regexp": "\\\\baprr\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "ascoresante",
    "name": "Ascore Santé Prévoyance",
    "regexp": "\\\\baxiome\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "auchandrive",
    "name": "Auchan Drive",
    "regexp": "\\\\bauchan\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "autolib",
    "name": "Autolib",
    "regexp": "\\\\bautolib\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bipandgo",
    "name": "Bipandgo",
    "regexp": "\\\\bbipandgo\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bitiba",
    "name": "Bitiba",
    "regexp": "\\\\bbitiba\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "blablacar",
    "name": "Blablacar",
    "regexp": "\\\\bblablacar\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bookingdotcom",
    "name": "Booking.com",
    "regexp": "\\\\bbooking.com\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bouyguesbox",
    "name": "Bouygues Box",
    "regexp": "\\\\bbouyg",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "bouyguestelecom",
    "name": "Bouygues Telecom",
    "regexp": "\\\\bbouyg",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "caf",
    "name": "CAF",
    "regexp": "\\\\bcaf\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "cdiscount",
    "name": "Cdiscount",
    "regexp": "\\\\bcdiscount\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "cesml",
    "name": "CESML",
    "regexp": "\\\\bcesml\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "cesu",
    "name": "CESU",
    "regexp": "\\\\bcncesu\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "cultura",
    "name": "Cultura",
    "regexp": "\\\\bcultura\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "darty",
    "name": "Darty",
    "regexp": "\\\\bdarty\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "deezer",
    "name": "Deezer",
    "regexp": "\\\\bdeezer\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "deliveroo",
    "name": "Deliveroo",
    "regexp": "\\\\bdeliveroo\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "directenergie",
    "name": "Direct Energie",
    "regexp": "\\\\bdirect energie\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "easyjet",
    "name": "EasyJet",
    "regexp": "\\\\beasyjet",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "eaudugrandlyon",
    "name": "Eau du Grand Lyon",
    "regexp": "\\\\bsoc eau gd lyon\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "edf",
    "name": "EDF",
    "regexp": "\\\\bedf\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "ekwateur",
    "name": "Ekwateur",
    "regexp": "\\\\bekwateur\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "electricitestrasbourg",
    "name": "Electricité de Strabourg",
    "regexp": "es energies strasbourg\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "enercoop",
    "name": "Enercoop",
    "regexp": "\\\\benercoop\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "engie",
    "name": "Engie",
    "regexp": "\\\\bengie\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "eovimcdparticuliers",
    "name": "Eovi MCD Particuliers",
    "regexp": "\\\\beovi mcd mutuelle\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "eticket",
    "name": "eTicket",
    "regexp": "\\\\betickets\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "fnac",
    "name": "Fnac",
    "regexp": "\\\\bfnac",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "free",
    "name": "Free",
    "regexp": "\\\\bfree (telecom|hautdebit)\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "freemobile",
    "name": "Free Mobile",
    "regexp": "\\\\bfree mobile\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "geg",
    "name": "GEG",
    "regexp": "\\\\bgaz et electricite de grenoble\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "generali",
    "name": "Generali",
    "regexp": "\\\\bgenerali\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "github",
    "name": "Github",
    "regexp": "\\\\bgithub\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "glisshop",
    "name": "Glisshop",
    "regexp": "\\\\bglisshop\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "harmonie",
    "name": "Harmonie",
    "regexp": "\\\\bharmonie\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "humanis",
    "name": "Humanis",
    "regexp": "\\\\bhumanis\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "impots",
    "name": "Impôts",
    "regexp": "(impot|impots|dgfip|d\\\\.g\\\\.f\\\\.i\\\\.p|ddfip|d\\\\.d\\\\.f\\\\.i\\\\.p|drfip|d\\\\.r\\\\.f\\\\.i\\\\.p|tresor public|finances pub|finances publiques)",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "inulogic",
    "name": "Inulogic",
    "regexp": "\\\\binulogic\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "justeat",
    "name": "JustEat",
    "regexp": "\\\\bjust eat\\\\b",
  },
  Object {
    "contact": Array [
      Object {
        "action": "contactComplementary",
        "href": "https://www.lamutuellegenerale.fr/mobile/mon-espace-adherent#modalContact",
        "type": "web",
      },
      Object {
        "number": "09 69 39 39 39",
        "type": "phone",
      },
      Object {
        "href": "https://play.google.com/store/apps/details?id=fr.lamutuellegenerale.mamutuelle",
        "platform": "android",
        "type": "app",
      },
      Object {
        "href": "https://apps.apple.com/fr/app/m-mutuelle/id582194132",
        "platform": "ios",
        "type": "app",
      },
    ],
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "lamutuellegenerale",
    "name": "La mutuelle générale",
    "regexp": "\\\\bla mutuelle gen",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "ldlc",
    "name": "LDLC",
    "regexp": "\\\\bldlc\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "mondediplo",
    "name": "Le Monde Diplomatique",
    "regexp": "\\\\bmonde[\\\\-\\\\s]diplomatique\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "leclercdrive",
    "name": "Leclerc Drive",
    "regexp": "\\\\bleclerc\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "lucca",
    "name": "Lucca",
    "regexp": "\\\\blucca\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "malentille",
    "name": "Ma lentille",
    "regexp": "\\\\bdigital eyewear\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "maifecheancier",
    "name": "Maif - Echeancier",
    "regexp": "\\\\bmaif\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "macif",
    "name": "Macif",
    "regexp": "\\\\bmacif\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "malakoffmederic",
    "name": "Malakoff Mederic",
    "regexp": "\\\\bmalakoff\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "msf",
    "name": "Médecins sans frontières",
    "regexp": "\\\\b(medecins sans frontieres|msf)\\\\b",
  },
  Object {
    "health": true,
    "isInstalled": false,
    "konnectorSlug": "mgen",
    "name": "MGEN",
    "regexp": "\\\\bmgen\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "misterauto",
    "name": "Mister Auto",
    "regexp": "\\\\bmister auto\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "nespresso",
    "name": "Nespresso",
    "regexp": "\\\\bnespresso\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "netflix",
    "name": "Netflix",
    "regexp": "\\\\bnetflix\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "net-entreprise-micro",
    "name": "Net-Entreprise (Micro-Entrepreneur)",
    "regexp": "\\\\bUrssaf\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "numericable",
    "name": "Numéricable",
    "regexp": "\\\\bnumericable\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "o2",
    "name": "O2",
    "regexp": "^o2\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "opngo",
    "name": "Opngo",
    "regexp": "\\\\bopngo\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "orange",
    "name": "Orange",
    "regexp": "\\\\borange\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "planeteoui",
    "name": "Planete OUI",
    "regexp": "\\\\boui energy\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "poleemploi",
    "name": "Pole Emploi",
    "regexp": "\\\\bpole emploi\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "probikeshop",
    "name": "Probikeshop",
    "regexp": "\\\\bprobikeshop\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "productboard",
    "name": "ProductBoard",
    "regexp": "\\\\bproductboard\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "saur",
    "name": "SAUR",
    "regexp": "\\\\bsaur\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "scaleway",
    "name": "Scaleway",
    "regexp": "\\\\bscaleway\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "sfr",
    "name": "SFR",
    "regexp": "\\\\bsfr\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "showroomprive",
    "name": "Showroom Privé",
    "regexp": "\\\\bshowroomprive\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "sncf",
    "name": "SNCF",
    "regexp": "\\\\bsncf\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "sosh",
    "name": "Sosh",
    "regexp": "\\\\bsosh\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "spartoo",
    "name": "Spartoo",
    "regexp": "\\\\bspartoo\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "stickersdiscount",
    "name": "Stickers Discount",
    "regexp": "\\\\bakoufen angers\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "tagandpass",
    "name": "Tag&Pass",
    "regexp": "\\\\bsemitag\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "theoldreader",
    "name": "The Old Reader",
    "regexp": "\\\\btheoldreader\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "thomann",
    "name": "Thomann",
    "regexp": "\\\\bthomann\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "trainline",
    "name": "Trainline",
    "regexp": "\\\\btrainline\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "unibet",
    "name": "Unibet",
    "regexp": "\\\\bunibet\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "venteprivee",
    "name": "Veepee",
    "regexp": "\\\\b(Vente\\\\-privee\\\\.com|veepee)\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "veoliaeau",
    "name": "Veolia Eau",
    "regexp": "\\\\bveolia\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "viasante",
    "name": "Viasanté",
    "regexp": "\\\\bVIASANTE\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "vinciautoroute",
    "name": "Vinci autoroute télépéage",
    "regexp": "\\\\b(vinci|escota)\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "wanimo",
    "name": "Wanimo",
    "regexp": "\\\\bwanimo\\\\b",
  },
  Object {
    "isInstalled": false,
    "konnectorSlug": "zooplus",
    "name": "ZooPlus",
    "regexp": "\\\\bzooplus\\\\b",
  },
]
`;
